refactor: alterando tag para melhor entendimento semantico

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -6,33 +6,25 @@
     <meta charset="UTF-8">
 </head>
 <body>
-<div class="w-full h-screen flex items-center justify-center">
-    <h1 class="text-3xl font-bold">
 
-        Não trabalho com abertura de bandas.
+<header class="w-full py-6 bg-green-500 flex items-center justify-center">
+    <h1 class="uppercase font-bold text-white text-2xl">Locadora de Veículos</h1>
+</header>
+<main class="w-full flex justify-center mt-12">
+    <nav class="bg-green-100/30 p-10 rounded-xl border shadow-lg">
+        <ul class="grid grid-cols-3 gap-x-20 *:uppercase *:border *:px-4 *:py-1 *:rounded-md *:bg-white *:shadow-lg *:font-semibold *:text-neutral-700">
+            <li>
+                <a href="/veiculos">Veículos</a>
+            </li>
+            <li>
+                <a href="/clientes">Clientes</a>
+            </li>
+            <li>
+                <a href="/alugueis">Locações</a>
+            </li>
+        </ul>
+    </nav>
 
-    </h1>
-</div>
-
-
-<!--    <header class="w-full py-6 bg-green-500 flex items-center justify-center">-->
-<!--        <h1 class="uppercase font-bold text-white text-2xl">Locadora de Veículos</h1>-->
-<!--    </header>-->
-<!--    <main class="w-full flex justify-center mt-12">-->
-<!--        <div class="bg-green-100/30 p-10 rounded-xl border shadow-lg">-->
-<!--            <ul class="grid grid-cols-3 gap-x-20 *:uppercase *:border *:px-4 *:py-1 *:rounded-md *:bg-white *:shadow-lg *:font-semibold *:text-neutral-700">-->
-<!--                <li>-->
-<!--                    <a href="/veiculos">Veículos</a>-->
-<!--                </li>-->
-<!--                <li>-->
-<!--                    <a href="/clientes">Clientes</a>-->
-<!--                </li>-->
-<!--                <li>-->
-<!--                    <a href="/alugueis">Locações</a>-->
-<!--                </li>-->
-<!--            </ul>-->
-<!--        </div>-->
-
-<!--    </main>-->
+</main>
 </body>
 </html>
