--- a/src/main/resources/templates/veiculos.html
+++ b/src/main/resources/templates/veiculos.html
@@ -12,7 +12,7 @@
 </header>
 <main class="w-full flex justify-center mt-12">
     <div>
-        <div class="bg-green-100/30 p-10 rounded-xl border shadow-lg">
+        <nav class="bg-green-100/30 p-10 rounded-xl border shadow-lg">
             <ul class="grid grid-cols-3 gap-x-20 *:uppercase *:border *:px-4 *:py-1 *:rounded-md *:bg-white *:shadow-lg *:font-semibold *:text-neutral-700">
                 <li>
                     <a href="/veiculos">Veículos</a>
@@ -24,7 +24,7 @@
                     <a href="/alugueis">Locações</a>
                 </li>
             </ul>
-        </div>
+        </nav>
 
         <div class="bg-green-100/30 p-10 rounded-xl border shadow-lg mt-12">
             <div class="flex items-center justify-between">
