--- a/src/main/resources/templates/editar-veiculo.html
+++ b/src/main/resources/templates/editar-veiculo.html
@@ -12,7 +12,7 @@
 </header>
 <main class="w-full flex justify-center mt-12">
     <div>
-        <div class="bg-green-100/30 p-10 rounded-xl border shadow-lg">
+        <nav class="bg-green-100/30 p-10 rounded-xl border shadow-lg">
             <ul class="grid grid-cols-3 gap-x-20 *:uppercase *:border *:px-4 *:py-1 *:rounded-md *:bg-white *:shadow-lg *:font-semibold *:text-neutral-700">
                 <li>
                     <a href="/veiculos">Veículos</a>
@@ -24,11 +24,11 @@
                     <a href="/alugueis">Locações</a>
                 </li>
             </ul>
-        </div>
+        </nav>
 
         <div class="bg-green-100/30 p-10 rounded-xl border shadow-lg mt-12">
             <h2 class="text-2xl font-bold text-neutral-700">Cadastrar Veículo</h2>
-            <form action="#" th:action="@{/veiculos/{id}(id=${veiculo.id})}" th:object="${veiculo}" method="put" class="mt-4">
+            <form action="#" th:action="@{/veiculos/{id}(id=${veiculo.id})}" th:object="${veiculo}" method="post" class="mt-4">
                 <div class="flex flex-col">
                     <label for="placa" class="text-neutral-700 font-semibold">Placa</label>
                     <input type="text" id="placa" name="placa" th:field="*{placa}" class="border rounded-md px-4 py-2 mt-2">
