--- a/src/main/resources/templates/criar-veiculo.html
+++ b/src/main/resources/templates/criar-veiculo.html
@@ -18,7 +18,7 @@
                     <a href="/veiculos">Veículos</a>
                 </li>
                 <li>
-                    <a href="/clientes">Clientes</a>
+                    <a href="/usuarios">Usuários</a>
                 </li>
                 <li>
                     <a href="/alugueis">Locações</a>
@@ -32,22 +32,27 @@
                 <div class="flex flex-col">
                     <label for="placa" class="text-neutral-700 font-semibold">Placa</label>
                     <input type="text" id="placa" name="placa" th:field="*{placa}" class="border rounded-md px-4 py-2 mt-2">
+                    <div class="text-xs text-red-500" th:if="${#fields.hasErrors('placa')}" th:errors="*{placa}"></div>
                 </div>
                 <div class="flex flex-col mt-4">
                     <label for="modelo" class="text-neutral-700 font-semibold">Modelo</label>
                     <input type="text" id="modelo" name="modelo" th:field="*{modelo}" class="border rounded-md px-4 py-2 mt-2">
+                    <div class="text-xs text-red-500" th:if="${#fields.hasErrors('modelo')}" th:errors="*{modelo}"></div>
                 </div>
                 <div class="flex flex-col mt-4">
                     <label for="marca" class="text-neutral-700 font-semibold">Marca</label>
                     <input type="text" id="marca" name="marca" th:field="*{marca}" class="border rounded-md px-4 py-2 mt-2">
+                    <div class="text-xs text-red-500" th:if="${#fields.hasErrors('marca')}" th:errors="*{marca}"></div>
                 </div>
                 <div class="flex flex-col mt-4">
                     <label for="ano" class="text-neutral-700 font-semibold">Ano</label>
                     <input type="text" id="ano" name="ano" th:field="*{ano}" class="border rounded-md px-4 py-2 mt-2">
+                    <div class="text-xs text-red-500" th:if="${#fields.hasErrors('ano')}" th:errors="*{ano}"></div>
                 </div>
                 <div class="flex flex-col mt-4">
                     <label for="cor" class="text-neutral-700 font-semibold">Cor</label>
                     <input type="text" id="cor" name="cor" th:field="*{cor}" class="border rounded-md px-4 py-2 mt-2">
+                    <div class="text-xs text-red-500" th:if="${#fields.hasErrors('cor')}" th:errors="*{cor}"></div>
                 </div>
                 <button type="submit" class="bg-green-500 text-white font-semibold rounded-md px-4 py-2 mt-4">Cadastrar</button>
             </form>
