--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -17,7 +17,7 @@
                 <a href="/veiculos">Veículos</a>
             </li>
             <li>
-                <a href="/clientes">Clientes</a>
+                <a href="/usuarios">Usuários</a>
             </li>
             <li>
                 <a href="/alugueis">Locações</a>
